improved logging and documentation (#1)
* improved logging and documentation

Signed-off-by: Kathryn Kodama <kathryn.s.kodama@gmail.com>

* removed suppress warnings

Signed-off-by: Kathryn Kodama <kathryn.s.kodama@gmail.com>